Fix extra margin in description text

--- a/app/components/ui/set-up-domain/select-new-blog-host/styles.scss
+++ b/app/components/ui/set-up-domain/select-new-blog-host/styles.scss
@@ -18,8 +18,7 @@
 	p.label-description {
 		font-size: 1.6rem;
 		font-weight: 300;
-		margin-top: 0;
-		padding: 20px;
+		padding: 0 20px 20px;
 	}
 
 	&:hover {
